--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="city_name">New York</string>
     <string name="city_desc">Ensoleillé</string>
     <string name="city_temp">24°C</string>
-    <string name="title_activity_favorite">ScrollingActivity</string>
+    <string name="title_activity_favorite">Favorite</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -96,5 +96,6 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="no_connexion">No connexion</string>
+    <string name="add_city">Add City</string>
 
 </resources>
